Added module-info.java for both Obsidian & ObsidianJFX, overhauled ObsidianJFX platform dependency configs to better handle resolving JavaFX dependencies and to account for quirks in how JavaFX Maven modules are built.